--- a/index.html
+++ b/index.html
@@ -1,306 +1,351 @@
 ﻿<!doctype html>
 <html>
-<head>
+<head design-width="750">
 	<meta charset="utf-8">
-	<title>无标题文档</title>
-	<link href="css/css.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="format-detection" content="telephone=no">
+	<title>Demo</title>
+	<link rel="stylesheet" href="css/style.css" /><!--页面样式-->
+	<link rel="stylesheet" href="css/common.css" /><!--常用样式-->
+	<link rel="stylesheet" href="css/animate.min.css" /><!--CSS3动画库-->
 	<link rel="stylesheet" href="css/c.css">
+	<script src="js/auto-size.js"></script><!--设置字体大小-->
 </head>
-
 <body>
-	<div class="header">
-		<div class="container clear">
-			<a href="#" class="brand fl"></a>
-			<div class="nav fl">
-				<a href="#" class="fl">首页</a>
-				<a href="#" class="fl">全屋定制</a>
-				<a href="#" class="fl">原木定制</a>
-				<a href="#" class="fl">设计团队</a>
-				<a href="#" class="fl">定制案例</a>
-				<a href="#" class="fl">走进约定</a>
-			</div>
-			<a href="#" class="fr tel"></a>
-			<a href="#" class="fr messages"></a>
-		</div>
-	</div>
-	<div class="main">
-		<div class="banner">
-		</div>
-		<div class="section-sale">
-			<h3>惊惠全城</h3>
-			<h4>这个315，木门不花钱！</h4>
-			<div class="date">免单时限：3月2日-3月18日</div>
-			<p>红星美凯龙、居然之家各大门店</p>
-			<a href="#">点我马上咨询</a>
-		</div>
-		<div class="section-valuable">
-			<div class="container">
-				<div class="wrap por clear">
-					<img src="img/valuable.jpg" alt="">
-					<div class="text fr">
-						<h3><b>原木</b>源自森林的时间珍品</h3>
-						<p>北美温带的百年阔叶硬木，环保、坚固又显档次成为木门材质首选。</p>
-						<p class="c999999">原木门，释放原木健康因子，尤其适合家有孕妇小孩和老人的家庭。</p>
-						<a href="#">去了解更多 </a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="section-ability">
-			<div class="title">
-				<h3><b>有实力</b>才敢专注原木</h3>
-				<small>Strength dare to focus on logs</small>
-			</div>
-			<div class="container">
-				<div class="row clear first">
-					<div class="left text fl">
-						<p><span>里外全实木</span></p>
-						<p><span>特别考验木材稳定性和制作工艺</span></p>
-						<p class="gray"><span>稍有不慎便有开裂变形可能</span></p>
-					</div>
-					<div class="fr right pic">
-						<img src="img/ability.jpg" alt="">
-					</div>
-				</div>
-				<div class="row second">
-					<h3>约定原木门，高于常规5MM</h3>
-				</div>
-				<div class="row clear third">
-					<div class="left fl pic">
-						<img src="img/ability-2.jpg" alt="">
-					</div>
-					<div class="right fr pic">
-						<img src="img/ability-3.jpg" alt="">
-					</div>
-				</div>
-				<div class="row fourth">
-					<div class="sub-title">
-						<h3>约定<b>甄选北美好材</b><br>一心一意专注原木</h3>
-					</div>
-					<div class="list clear">
-						<div class="w30 fl">
-							<div class="pic">
-								<img src="img/ability-4.jpg" alt="">
-							</div>
-							<div class="text">
-								<h4>【 耐用 】</h4>
-								<p>甄选全球最大温带硬木树种<br>确保原木耐久性</p>
-							</div>
-						</div>
-						<div class="w30 fl">
-							<div class="pic">
-								<img src="img/ability-5.jpg" alt="">
-							</div>
+	<div class="mobile-wrap center">
 
-							<div class="text">
-								<h4>【 环保 】</h4>
-								<p>区别于任何实木复合，里外纯实木<br>绝无粘胶剂</p>
-							</div>
-						</div>
-						<div class="w30 fl">
-							<div class="pic">
-								<img src="img/ability-6.jpg" alt="">
-							</div>
-
-							<div class="text">
-								<h4>【 精致 】</h4>
-								<p>德国进口生产线，全新升级<br>原木家具定制标准</p>
-							</div>
-						</div>
-					</div>
+		<div class="header">
+	<!-- 		<div class="container">
+				<a href="#" class="brand"></a>
+				<div class="nav fl">
+					<a href="#" class="fl">首页</a>
+					<a href="#" class="fl全屋定制</a>
+					<a href="#" class="fl">原木定制</a>
+					<a href="#" class="fl">设计团队</a>
+					<a href="#" class="fl">定制案例</a>
+					<a href="#" class="fl">走进约定</a>
 				</div>
-				<div class="row fifth">
-					<div class="sub-title">
-						<h3>约定原木门<b>表里如一</b><br>一如你的为人</h3>
-						<p>约定套装门与实木复合门的对比图</p>
-					</div>
-				</div>
-				<div class="row clear third">
-					<div class="left fl pic">
-						<img src="img/ability-7.jpg" alt="">
-						<p>原木门</p>
-					</div>
-					<div class="right fr pic">
-						<img src="img/ability-8.jpg" alt="">
-						<p>实木复合门</p>
+				<a href="#" class="fr tel"></a>
+				<a href="#" class="fr messages"></a>
+			</div> -->
+			<a href="#" class="back"></a>
+			<h1>3.15全屋定制</h1>
+			<div href="#" class="menu">
+				<span></span>
+				<div class="child-menu">
+					<div class="nav fl">
+						<a href="#" class="fl">首页</a>
+						<a href="#" class="fl">全屋定制</a>
+						<a href="#" class="fl">原木定制</a>
+						<a href="#" class="fl">设计团队</a>
+						<a href="#" class="fl">定制案例</a>
+						<a href="#" class="fl">走进约定</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="section-door">
-			<h3><b>定全屋</b>送木门<b>只在这个315</b></h3>
-			<div class="date">仅限3月2日-3月18日</div>
-			<div class="container">
-				<div class="door clear">
-					<div class="fl pic"><img src="img/door.jpg" alt=""></div>
-					<div class="fr content">
-						<h4>原木套装门</h4>
-						<div class="cost">
-							￥<b>0</b>.00 <span>日常参考价：<i class="del">7680</i>元</span>
-						</div>
-						<div class="item">北美进口原木</div>
-						<div class="item">环保水性漆涂装</div>
-						<img src="img/hico6.png" alt="">
-						<p>里外整块实木打造，凑近闻还有原木清香</p>
-					</div>
-				</div>
-				<div class="tips">现在定制，木门0元带回家！</div>
-				<div class="qrcode clear">
-					<div class="fl w50">
-						<p>现在长按或扫描二维码联系家居顾问</p>
-						<div class="row clear">
-							<div class="pic fl w50">
-								<img src="img/hico7.png" alt="">
-								<span>家居顾问“<b>茂茂</b>”在线为你答疑</span>
-							</div>
-							<div class="pic fl w50">
-								<img src="img/hico7.png" alt="">
-								<span>家居顾问“<b>菲菲</b>”在线为你答疑</span>
-							</div>
+		<div class="main">
+			<div class="banner">
+				<img src="img/banner.jpg" alt="">
+			</div>
+			<div class="section-sale">
+				<h3>惊惠全城</h3>
+				<h4>这个315，木门不花钱！</h4>
+				<div class="date">免单时限：3月2日-3月18日</div>
+				<p>红星美凯龙、居然之家各大门店</p>
+				<a href="#">点我马上咨询</a>
+			</div>
+			<div class="section-valuable">
+				<div class="container">
+					<div class="wrap por clear">
+						<img src="img/valuable.jpg" alt="">
+						<div class="text">
+							<h3><b>原木</b>源自森林的时间珍品</h3>
+							<p>北美温带的百年阔叶硬木，环保、坚固又显档次成为木门材质首选。</p>
+							<p class="c999999">原木门，释放原木健康因子，尤其适合家有孕妇小孩和老人的家庭。</p>
+							<a href="#">去了解更多 </a>
 						</div>
 					</div>
-					<div class="fr w50">
-						<img src="img/hico8.png" alt="" class="brand">
-						<h4>立得<span>减1000优惠</span>资格,先到先得</h4>
-						<a href="#">网络预约专享</a>
-					</div>
 				</div>
 			</div>
-		</div>
-		<div class="section-quality">
-			<h3>敢于接受检验的环保<b>才是真环保</b></h3>
-			<p>【约定·全屋定制所有产品甲醛指标均低于甲醛检测器可测范围】</p>
-			<div class="pic">
-				<img src="img/quality-1.jpg" alt="">
-			</div>
-			<div class="row">
-				<strong>约定环保承诺：原木产品送检未达环保标准，差1赔10</strong>
-			</div>
-			<div class="row">
-				<div class="tips">
-					现在定制，下单即送甲醛检测仪1个
-				</div>
-				<span>仅限网络预约客户专享</span>
-			</div>
-		</div>
-		<div class="section-quadrupole">
-			<small>quadrupole</small>
-			<h3>约定<b>四极材</b></h3>
-			<div class="tips">四层严选北美好材，从源头杜绝原木开裂变形可能</div>
-		</div>
-		<div class="section-long-quality">
-			<div class="container">
-				<div class="list clear">
-					<div class="w22 fl">
-						<h3>进口材</h3>
-						<div class="pic"><img src="img/long-quality-2.jpg" alt=""></div>
-						<p>只选用硬度最高的，北美北方材</p>
-					</div>
-					<div class="w22 fl">
-						<h3>窖干材</h3>
-						<div class="pic"><img src="img/quality-2.jpg" alt=""></div>
-						<p>历时长达90天，蒸气烘干、脱脂除菌</p>
-					</div>
-					<div class="w22 fl">
-						<h3>双面FAS特级材</h3>
-						<div class="pic"><img src="img/quality-3.jpg" alt=""></div>
-						<p>木面光滑细腻，无结疤，1棵树中只得5%</p>
-					</div>
-					<div class="w22 fl">
-						<h3>控湿材</h3>
-						<div class="pic"><img src="img/quality-4.jpg" alt=""></div>
-						<p>15天恒温恒湿置放期，确保生产前木材含水率达标</p>
-					</div>
-				</div>
-				<div class="pic-text">
-					<img src="img/hico10.png" alt="">
-				</div>
-				<div class="tips">
-					5年超长质保，终生上门维护
-				</div>
-			</div>
-		</div>
-		<div class="section-shoping">
-			<div class="container">
+			<div class="section-ability">
 				<div class="title">
-					<h3>315活动会场 <b>1秒抵达</b></h3>
-					<small>one second arrival</small>
+					<h3><b>有实力</b>才敢专注原木</h3>
+					<small>Strength dar</small>
 				</div>
-				<div class="list clear">
-					<div class="w22 fl">
-						<div class="pic">
-							<img src="img/shoping.jpg" alt="">
+				<div class="container">
+					<div class="row clear first">
+						<div class="left text fl">
+							<p><span>里外全实木</span></p>
+							<p><span>特别考验木材稳定性和制作工艺</span></p>
+							<p class="gray"><span>稍有不慎便有开裂变形可能</span></p>
 						</div>
-						<h4>整体橱柜</h4>
-						<p>6折封顶，吊柜+门免费送</p>
-						<a href="#">立即去定制</a>
-						<div class="hot">热销</div>
-					</div>
-					<div class="w22 fl">
-						<div class="pic">
-							<img src="img/shoping-2.jpg" alt="">
+						<div class="fr right pic">
+							<img src="img/ability.jpg" alt="">
 						</div>
-						<h4>整体衣柜</h4>
-						<p>最高6折，卧室门免费送</p>
-						<a href="#">立即去定制</a>
-						<div class="hot">热销</div>
 					</div>
-					<div class="w22 fl">
-						<div class="pic">
-							<img src="img/shoping-3.jpg" alt="">
+					<div class="row second">
+						<h3><b>约定原木门</b>高于常规5MM</h3>
+					</div>
+					<div class="row clear third">
+						<div class="left fl pic">
+							<img src="img/ability-2.jpg" alt="">
 						</div>
-						<h4>整体护墙</h4>
-						<p>进口原木，全屋环保</p>
-						<a href="#">立即去定制</a>
-						<div class="hot">低促</div>
-					</div>
-					<div class="w22 fl">
-						<div class="pic">
-							<img src="img/shoping-4.jpg" alt="">
+						<div class="right fr pic">
+							<img src="img/ability-3.jpg" alt="">
 						</div>
-						<h4>套装门</h4>
-						<p>定制全屋，木门免单</p>
-						<a href="#">立即去定制</a>
-						<div class="hot">免费送</div>
 					</div>
-				</div>
-				<div class="ads">
-					<a href="#"><img src="img/shoping-sale.png" alt=""></a>
-				</div>
-			</div>
-		</div>
-		<div class="section-fail">
-			<div class="container">
-				<h3>别再让装修失误<br><b>冲淡您的乔迁之喜</b></h3>
-				<div class="fail clear">
-					<div class="pic fl">
-						<img src="img/fail.png" alt="">
-					</div>
-					<div class="pic fr">
-						<img src="img/fail2.png" alt="">
-					</div>
-				</div>
-				<div class="tips">选择全屋定制，让新家变成惊喜</div>
-			</div>
-		</div>
-	</div>
+					<div class="row fourth">
+						<div class="sub-title">
+							<h3>约定<b>甄选北美好材</b><br>一心一意专注原木</h3>
+						</div>
+						<div class="list clear">
+							<div class="w30 fl">
+								<div class="pic fl">
+									<img src="img/ability-4.jpg" alt="">
+								</div>
+								<div class="text">
+									<h4>【 耐用 】</h4>
+									<p>甄选全球最大温带硬木树种<br>确保原木耐久性</p>
+								</div>
+							</div>
+							<div class="w30 fl">
+								<div class="pic fr">
+									<img src="img/ability-5.jpg" alt="">
+								</div>
 
-	<div class="footer">
-		<div class="container">
-			<div class="sale-date">
-				优惠时限<br><b>3月2日-3月18日</b>
+								<div class="text">
+									<h4>【 环保 】</h4>
+									<p>区别于任何实木复合，里外纯实木<br>绝无粘胶剂</p>
+								</div>
+							</div>
+							<div class="w30 fl">
+								<div class="pic fl">
+									<img src="img/ability-6.jpg" alt="">
+								</div>
+
+								<div class="text">
+									<h4>【 精致 】</h4>
+									<p>德国进口生产线，全新升级<br>原木家具定制标准</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row fifth">
+						<div class="sub-title">
+							<h3>约定原木门<b>表里如一</b><br>一如你的为人</h3>
+							<p>约定套装门与实木复合门的对比图</p>
+						</div>
+					</div>
+					<div class="row clear third">
+						<div class="left fl pic">
+							<img src="img/ability-7.jpg" alt="">
+							<p>原木门</p>
+						</div>
+						<div class="right fr pic">
+							<img src="img/ability-8.jpg" alt="">
+							<p>实木复合门</p>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="tips">
-				专属家居顾问，在线为你答疑
+			<div class="section-door">
+				<h3><b>定全屋<span class="red">送</span>木门</b>只在<br>这个315</h3>
+				<div class="date">仅限3月2日-3月18日</div>
+				<div class="container">
+					<div class="door clear">
+						<div class="fl pic"><img src="img/door.jpg" alt=""></div>
+						<div class="fr content">
+							<h4>原木套装门</h4>
+							<div class="cost">
+								￥<b>0</b>.00 <span>日常参考价：<i class="del">7680</i>元</span>
+							</div>
+							<div class="item">北美进口原木</div>
+							<div class="item">环保水性漆涂装</div>
+							<img src="img/hico6.png" alt="" class="w258">
+							<p>里外整块实木打造，凑近闻还有原木清香</p>
+						</div>
+					</div>
+					<div class="tips">马上咨询，了解更多优惠详情</div>
+					<div class="qrcode clear">
+						<div class="fl w50">
+							<p>现在长按或扫描二维码联系家居顾问</p>
+							<div class="row clear w650">
+								<div class="pic fl w50">
+									<img src="img/hico7.png" alt="">
+									<span>“<b>茂茂</b>”在线为你答疑</span>
+								</div>
+								<div class="pic fl w50">
+									<img src="img/hico7.png" alt="">
+									<span>“<b>菲菲</b>”在线为你答疑</span>
+								</div>
+							</div>
+						</div>
+						<div class="fr w50">
+							<h4>立得<span>减1000优惠</span>资格<br>先到先得</h4>
+							<a href="#">网络预约专享</a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<a href="" class="tel">咨询热线：400-600-1180</a>
-			<div class="additive">
-				以上所有活动最终解释权归约定家居所有
+			<div class="section-quality">
+				<h3>敢于接受检验的环保<b>才是真环保</b></h3>
+				<p>【约定·全屋定制所有产品甲醛指标均低于甲醛检测器可测范围】</p>
+				<div class="pic">
+					<img src="img/quality-1.jpg" alt="">
+				</div>
+				<div class="row">
+					<strong><b>约定环保承诺</b>原木产品送检未达环保标准，差1赔10</strong>
+				</div>
+				<div class="row">
+					<div class="tips">
+						现在定制，下单即送甲醛检测仪1个
+					</div>
+					<span>仅限网络预约客户专享</span>
+				</div>
+			</div>
+			<div class="section-quadrupole">
+				<small>quadrupole</small>
+				<h3>约定<b>四极材</b></h3>
+				<div class="tips">“约定四极材”四层严选北美好材，从源头杜绝原木开裂变形可能</div>
+			</div>
+			<div class="section-long-quality">
+				<div class="container">
+					<div class="list">
+						<div class="w22 fl">
+							<h3>进口材</h3>
+							<div class="pic"><img src="img/long-quality-2.jpg" alt=""></div>
+							<p>只选用硬度最高的，北美北方材</p>
+						</div>
+						<div class="w22 fl">
+							<h3>窖干材</h3>
+							<div class="pic"><img src="img/quality-2.jpg" alt=""></div>
+							<p>历时长达90天，蒸气烘干、脱脂除菌</p>
+						</div>
+						<div class="w22 fl">
+							<h3>双面FAS特级材</h3>
+							<div class="pic"><img src="img/quality-3.jpg" alt=""></div>
+							<p>木面光滑细腻，无结疤，1棵树中只得5%</p>
+						</div>
+						<div class="w22 fl">
+							<h3>控湿材</h3>
+							<div class="pic"><img src="img/quality-4.jpg" alt=""></div>
+							<p>15天恒温恒湿置放期，确保生产前木材含水率达标</p>
+						</div>
+					</div>
+					<div class="bg">
+						<div class="pic-text">
+							<img src="img/hico13.png" alt="">
+						</div>
+						<div class="tips">
+							5年超长质保，终生上门维护
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="section-quadrupole add">
+				<small>Customized cabinets</small>
+				<h3>315<b>原木门定制</b>正当时</h3>
+				<div class="bg000">约定承诺：全年保价，高于差价10倍返还！</div>
+			</div>
+			<div class="section-wap-add">
+				<img src="img/aa315.png" alt="">
+				<div class="tips">提前预约，保留原木门6折封顶优惠</div>
+			</div>
+			<div class="section-fail">
+				<div class="container">
+					<h3>别再让装修失误<br><b>冲淡您的乔迁之喜</b></h3>
+					<div class="fail">
+						<div class="pic">
+							<img src="img/fail.png" alt="">
+						</div>
+						<div class="pic">
+							<img src="img/fail2.png" alt="">
+						</div>
+					</div>
+					<div class="tips">选择全屋定制，让新家变成惊喜</div>
+				</div>
+			</div>
+
+			<div class="section-shoping">
+				<div class="container">
+					<div class="title">
+						<h3>315活动会场 <b>1秒抵达</b></h3>
+						<small>one second arrival</small>
+					</div>
+					<div class="list">
+						<div class="w22">
+							<div class="pic">
+								<img src="img/shoping.jpg" alt="">
+							</div>
+							<h4>整体橱柜</h4>
+							<p>6折封顶，吊柜+门免费送</p>
+							<a href="#">立即去定制</a>
+							<div class="hot">热销</div>
+						</div>
+						<div class="w22">
+							<div class="pic">
+								<img src="img/shoping-2.jpg" alt="">
+							</div>
+							<h4>整体衣柜</h4>
+							<p>最高6折，卧室门免费送</p>
+							<a href="#">立即去定制</a>
+							<div class="hot">热销</div>
+						</div>
+						<div class="w22">
+							<div class="pic">
+								<img src="img/shoping-3.jpg" alt="">
+							</div>
+							<h4>整体护墙</h4>
+							<p>进口原木，全屋环保</p>
+							<a href="#">立即去定制</a>
+							<div class="hot">低促</div>
+						</div>
+						<div class="w22">
+							<div class="pic">
+								<img src="img/shoping-4.jpg" alt="">
+							</div>
+							<h4>套装门</h4>
+							<p>定制全屋，木门免单</p>
+							<a href="#">立即去定制</a>
+							<div class="hot">免费送</div>
+						</div>
+					</div>
+					<div class="ads">
+						<a href="#"><img src="img/shoping-sale.png" alt=""></a>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-	
+
+		<div class="footer">
+			<div class="container">
+				<div class="sale-date">
+					优惠时限<br><b>3月2日-3月18日</b>
+				</div>
+				<div class="tips">专属家居顾问，在线为你答疑</div>
+				<a href="" class="tel">咨询热线：400-600-1180</a>
+				<div class="additive">
+					以上所有活动最终解释权归约定家居所有
+				</div>
+			</div>
+		</div>
+
+
+
+
+	</div><!--mobile_wrap-->
 </body>
-<script src="js/jquery-1.12.4.min.js" type="text/javascript"></script>
-<script src="js/index.js" type="text/javascript"></script>
+<script src="js/jquery-2.2.4.min.js"></script><!--jQ库-->
+<script src="js/swiper-3.3.1.jquery.min.js"></script><!--轮播库-->
+<script src="js/version-3.2.8.js"></script><!--封装函数-->
+<script>
+	$('.header .menu').on('click', function() {
+		$(this).toggleClass('active');
+		$(this).children('.child-menu').slideToggle();
+	});
+</script>
 </html>
